# v0-hr-software-future

./: .gitignore  README.md  middleware.ts  package.json
app/: globals.css
backend/: app.py  langgraph.json  logging_config.py  package-lock.json  package.json  pyproject.toml  requirements.txt  test_mcp.py
backend/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
backend/src/: graphbuilder.py  langgraph_test.py  nodes.py  prompts.py  state.py  tools.py
backend/src/agents/db_agent/: graphbuilder.py  nodes.py  prompts.py  state.py  tools.py
backend/src/agents/hr_agent/: graphbuilder.py  logging_utils.py  nodes.py  prompts.py  state.py  utils.py
backend/src/agents/rag_agent/: graphbuilder.py  nodes.py  prompts.py  tools.py
backend/src/core/: audio_utils.py  audit_helpers.py  file_readers.py
backend/src/core/mcp/: mcp.json  supabase.py
backend/src/hr_agent/: audit.py  audit_helpers.py  graphbuilder.py  logging_utils.py  nodes.py  prompts.py  state.py  tools.py  utils.py
backend/src/services/: __init__.py  database_operations.py  helpers.py  main.py
backend_js/: .gitignore  MIGRATION_MAPPING.md  README.md  app.ts  langgraph.json  package-lock.json  package.json  tsconfig.json
backend_js/src/: app.ts  graphbuilder.ts  logging_config.ts  nodes.ts  prompts.ts  (+2 more)
components/: app-sidebar.tsx
frontend/: README.md  package-lock.json  package.json  pnpm-lock.yaml  proxy.ts
lib/: mock-data.ts
scripts/: 002_enable_rls.sql  008_complete_seed_final.sql
(+201 files in other folders)
