[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.122.0",
    "langchain>=1.1.0",
    "langchain-anthropic>=1.2.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.1.0",
    "langchain-groq>=1.1.0",
    "langchain-mcp-adapters>=0.1.14",
    "langchain-openai>=1.1.0",
    "langchain-tavily>=0.2.13",
    "langgraph>=1.0.4",
    "langgraph-cli[inmem]>=0.4.7",
    "mcp>=1.22.0",
    "pandas>=2.3.3",
    "pypdf>=6.4.0",
    "supabase>=2.24.0",
    "tabulate>=0.9.0",
    "uvicorn>=0.38.0",
    "watchdog>=6.0.0",
]
